<resources>
    <string name="app_name">Mama\'s Biz</string>
    <string name="total_payment">Total Payment: KES 40K</string>
    <string name="customer">Customer</string>
    <string name="supplier">Supplier</string>
    <string name="_10k">10K</string>
    <string name="_30k">30K</string>
    <string name="create_credit">CREATE CREDIT</string>
    <string name="create_debt">Create Debt</string>
    <string name="profit">Profit</string>
    <string name="activity">Activity</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_credit">CreditActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_debt">DebtActivity</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="kindly_fill_all_the_additional_details">Kindly fill all the additional details:</string>
    <string name="name_of_the_customer">Name of the customer</string>
    <string name="name_of_the_supplier">Name of the supplier</string>
    <string name="e_g_john_doe">e.g John Doe</string>
    <string name="phone_number_of_the_customer_optional">Phone number of the customer (optional)</string>
    <string name="phone_number_of_the_supplier_optional">Phone number of the supplier (optional)</string>
    <string name="_2547xxxxxxxx">+2547XXXXXXXX</string>
    <string name="status_of_the_payment">Status of the payment</string>
    <string name="kindly_fill_all_the_products_bought">Kindly fill all the products purchased:</string>
    <string name="name">Name</string>
    <string name="qty">Qty</string>
    <string name="unit">Unit</string>
    <string name="price">Price</string>
    <string name="amt">Amt</string>
    <string name="meat">Meat</string>
    <string name="kg">Kg</string>
    <string name="_200">0</string>
    <string name="intestines">Intestines</string>
    <string name="african_sausage">African Sausage</string>
    <string name="no">No.</string>
    <string name="head_and_legs">Head and Legs</string>
    <string name="kidney">Kidney</string>
    <string name="liver">Liver</string>
    <string name="fillet">Fillet</string>
    <string name="skin">Skin</string>
    <string name="total">Total :</string>
    <string name="kindly_select_the_date_to_be_paid">Kindly Select the date the debt will be paid:</string>
    <string name="kindly_select_the_date_credit_to_be_paid">Kindly Select the date the credit will be paid:</string>
    <string name="preview">Preview</string>
    <string name="customer_name">Customer Name: </string>
    <string name="supplier_name">Supplier Name: </string>
    <string name="john_doe">John Doe</string>
    <string name="customer_number">Customer Number:</string>
    <string name="supplier_number">Supplier Number:</string>
    <string name="_2547xx_xxx_xxx">+2547XX XXX XXX</string>
    <string name="total_paid">Total Paid</string>
    <string name="total_credit">Total Credit:</string>
    <string name="kes_4000">KES 0</string>
    <string name="debt_status">Debt Status:</string>
    <string name="credit_status">Credit Status:</string>
    <string name="not_paid">Not Paid</string>
    <string name="payment_date">Payment Date</string>
    <string name="_31_3_2021">31/3/2021</string>
    <string name="pay_date">Pay Date:</string>
    <array name="status">
        <item>Select Status</item>
        <item>Paid</item>
        <item>Not Fully Paid</item>
        <item>Not Paid</item>
    </array>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="splash">Splash</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="_254">+254</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="an_otp_has_been_sent_to_this_number">An OTP has been sent to this number:</string>
    <string name="no_otp_sent_retry">No OTP sent? Retry.</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="no_records">No Records have been created yet. But don\'t worry we can create one now!</string>
    <string name="_31_2_2021">31/2/2021</string>
    <string name="search">Search Name or Payment Status</string>
    <string name="balance">Balance: </string>
    <string name="total_amount_paid">Total Amount Paid:</string>
    <string name="_0">0</string>
    <string name="user_not_found">User not found. Do not worry,let us try another word.</string>
    <string name="details_of_the_customer">Details of the Customer</string>
    <string name="details_of_the_supplier">Details of the Supplier</string>
    <string name="update">Update</string>
    <string name="update_payment">UPDATE PAYMENT</string>
    <string name="total_amount_paid_money">Total Amount Paid: Kes </string>
    <string name="current_month">Current Month</string>
    <string name="view_all_payments">View All Payments</string>
    <string name="update_payment_info">There are no more payments that have been done other than the first payment. If there are, update payments.</string>
    <string name="update_payments">Update Payments</string>
    <string name="total_unpaid">Total Unpaid</string>
    <string name="total_balance">Balance</string>
    <string name="creditor">Creditor</string>
    <string name="total_amount">Total Amount:</string>
    <string name="account">Account</string>
    <string name="biz_owner">Biz Owner</string>
    <string name="tell_a_friend">Tell A friend</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="report_issue">Report Issue</string>
    <string name="log_out">Log Out</string>
    <string name="gross_profit">Gross profit</string>
    <string name="customer_paid_kes">Customer paid: KES</string>
    <string name="_90_paid">90% paid</string>
    <string name="total_sold_kes">Total Sold: KES</string>
    <string name="total_bought_kes">Total Bought: KES</string>
    <string name="kindly_add_all_cattle_bought">Add all cattle bought</string>
    <string name="cattle_type">Cattle</string>
    <string name="type_a">Type A</string>
    <string name="total_amount_kes_4000">Total Amount: KES </string>
    <string name="add">Add</string>
    <string name="did_you_also_buy_parts_of_a_cow">Did you also buy parts of a cow?</string>
    <string name="cattle_bought">Cattle Bought</string>
    <string name="total_cattle_amount">Cattle Amount</string>
    <string name="cattle_paid">Cattle paid</string>
    <string name="cattle_balance">Cattle Balance</string>
    <string name="products_paid">Products Paid</string>
    <string name="products_balance">Products Balance</string>
    <string name="no_internet_connection">No Internet Connection.</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="total_balance_kes">Total Balance: Kes</string>
    <string name="create_supplier">Create Supplier</string>
    <string name="create_customer">Create customer</string>
    <string name="paid">Paid:</string>
    <string name="paid1">Paid</string>
    <string name="product_amount">Product Amount</string>
    <string name="amount">Amount</string>

</resources>