<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/homepage_icon" />
    <item android:id="@+id/customerFragment"
        android:title="@string/customer"
        android:icon="@drawable/customer_icon"
        />
    <item android:id="@+id/supplierFragment"
        android:title="@string/supplier"
        android:icon="@drawable/supplier_icon"/>
    <item android:id="@+id/profitFragment"
        android:title="@string/profit"
        android:icon="@drawable/profit_icon"/>
    <item android:id="@+id/accountFragment"
        android:title="@string/account"
        android:icon="@drawable/activity_icon"/>

</menu>