<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main.userInterface.fragments.AccountFragment">
    <com.google.android.material.appbar.AppBarLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/colorPrimary"
            />
    </com.google.android.material.appbar.AppBarLayout>
   <ImageView
       android:layout_width="55dp"
       android:layout_height="55dp"
       android:id="@+id/ivImageLogo"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/appbar"
       android:layout_marginTop="20dp"
       android:layout_marginStart="56dp"
       android:src="@drawable/rounded_cow"
       android:contentDescription="@string/splash"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvUserName"
        app:layout_constraintStart_toEndOf="@id/ivImageLogo"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/john_doe"
        android:textSize="20sp"
        android:fontFamily="@font/cormorantsc_bold"
        android:textColor="@color/colorDarkFont"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvUserType"
        app:layout_constraintStart_toEndOf="@id/ivImageLogo"
        app:layout_constraintTop_toBottomOf="@id/tvUserName"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:text="@string/biz_owner"
        android:textSize="16sp"
        android:fontFamily="@font/cormorantsc_regular"
        android:textColor="@color/colorIcon"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTellAFriend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUserPhoneNumber"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/tell_a_friend"
        android:textSize="16sp"
        android:fontFamily="@font/cormorantsc_regular"
        android:textColor="@color/colorDarkFont"
        app:drawableStartCompat="@drawable/ic_tell_a_friend"
        android:drawablePadding="4dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvUserPhoneNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUserType"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/_2547xxxxxxxx"
        android:textSize="16sp"
        android:fontFamily="@font/cormorantsc_regular"
        android:textColor="@color/colorDarkFont"
        app:drawableStartCompat="@drawable/ic_baseline_local_phone_24"
        android:drawablePadding="4dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvRateApp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTellAFriend"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/rate_this_app"
        android:textSize="16sp"
        android:fontFamily="@font/cormorantsc_regular"
        android:textColor="@color/colorDarkFont"
        app:drawableStartCompat="@drawable/ic_baseline_rate_review_24"
        android:drawablePadding="4dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvReportIssue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRateApp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/report_issue"
        android:textSize="16sp"
        android:fontFamily="@font/cormorantsc_regular"
        android:textColor="@color/colorDarkFont"
        app:drawableStartCompat="@drawable/ic_baseline_bug_report_24"
        android:drawablePadding="4dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLogOut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvReportIssue"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:text="@string/log_out"
        android:textSize="16sp"
        android:fontFamily="@font/cormorantsc_regular"
        android:textColor="@color/colorDarkFont"
        app:drawableStartCompat="@drawable/ic_baseline_log_out"
        android:drawablePadding="4dp"/>






</androidx.constraintlayout.widget.ConstraintLayout>