<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/updateBottomSheetContainer"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bottom_sheet_background"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/money"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/ivMoneyIcon"
        android:contentDescription="@string/splash"
        android:layout_marginTop="4dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ivMoneyIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/tvUpdatePayment"
        android:text="@string/update_payment"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/cormorantsc_bold"
        android:layout_marginTop="4dp"
        android:textSize="16sp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvUpdatePayment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        android:id="@+id/totalAmtPaid">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/tvTotalAmtPaid"
            android:text="@string/total_amount_paid"
            android:textColor="@color/colorDarkFont"
            android:fontFamily="@font/cormorantsc_bold"
            android:layout_marginTop="16dp"
            android:layout_marginStart="4dp"
            android:textSize="16sp"/>

        <EditText
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvTotalAmtPaid"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginStart="4dp"
            android:inputType="number"
            android:textColor="@color/colorDarkFont"
            android:id="@+id/etTotalAmtPaid"
            android:autofillHints="null"
            tools:ignore="LabelFor" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/totalAmtPaid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/tvTotalBal"
        android:text="@string/total_balance_kes"
        android:textColor="@color/colorDarkFont"
        android:fontFamily="@font/cormorantsc_regular"
        android:layout_marginTop="16dp"
        android:layout_marginStart="4dp"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/totalAmtPaid"
        app:layout_constraintStart_toEndOf="@id/tvTotalBal"
        android:id="@+id/tvExactTotalBal"
        android:text="@string/kes_4000"
        android:textColor="@color/colorDarkFont"
        android:fontFamily="@font/cormorantsc_regular"
        android:layout_marginTop="16dp"
        android:layout_marginStart="4dp"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvTotalBal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/tvTotalAmt"
        android:text="@string/total_amount_paid_money"
        android:textColor="@color/colorDarkFont"
        android:fontFamily="@font/cormorantsc_regular"
        android:layout_marginTop="16dp"
        android:layout_marginStart="4dp"
        android:textSize="16sp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTotalAmt"
        android:id="@+id/btUpdate"
        android:background="@drawable/rounded_orange_button"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/update"
        android:textColor="@color/colorFont"
        android:fontFamily="@font/cormorantsc_bold"
        android:textSize="20sp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>