<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:id="@+id/consumerCardView"
    app:cardElevation="24dp"
    android:background="@drawable/card_view_background"
    android:padding="8dp"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:padding="2dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/chop"
            android:id="@+id/ivCowIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/splash"
            android:layout_marginTop="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:fontFamily="@font/cormorantsc_semibold"
            android:textColor="@color/colorDarkFont"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/ivCowIcon"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:id="@+id/tvCustomerName"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amt"
            android:fontFamily="@font/cormorantsc_bold"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/ivCowIcon"
            app:layout_constraintTop_toBottomOf="@id/tvCustomerName"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:id="@+id/tvAmountPaid"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kes_4000"
            android:fontFamily="@font/cormorantsc_regular"
            android:textColor="@color/colorIcon"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="8dp"
            android:id="@+id/tvBalance"
            app:drawableStartCompat="@drawable/money_small_icon"
            android:drawablePadding="4dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_31_2_2021"
            android:fontFamily="@font/cormorantsc_regular"
            android:textColor="@color/colorIcon"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBalance"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="8dp"
            android:id="@+id/tvDate" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>

